ページネーションに現在地追加

--- a/src/components/oganisms/pagination/styles.module.scss
+++ b/src/components/oganisms/pagination/styles.module.scss
@@ -9,5 +9,11 @@
   a {
     padding: 0 0.2em;
     text-decoration: underline;
+    color: #3ea8ff;
+  }
+
+  .isCurrent {
+    padding: 0 0.2em;
+    color: inset;
   }
 }
